--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,12 @@
 cmake_minimum_required(VERSION 2.8)
 
 project(student_toolkit)
-add_executable(${PROJECT_NAME} "main.cpp" "png_toolkit.cpp" "filter.cpp" "png_toolkit.h"
-    "stb_image.h" "stb_image_write.h" "filter.h" "image_data.h")
+set(SOURCES "filter/filter.cpp"
+            "png_toolkit/png_toolkit.cpp"
+            "main.cpp"
+            "filter/filter.h"
+            "png_toolkit/image_data.h"
+            "png_toolkit/png_toolkit.h"
+            "stb_image/stb_image_write.h")
+add_executable(${PROJECT_NAME} ${SOURCES})
+target_include_directories(${PROJECT_NAME} PUBLIC filter png_toolkit stb_image)
